--- a/sub_work.html
+++ b/sub_work.html
@@ -117,12 +117,14 @@
                     <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery01_1.png" alt="갤러리01"/></a>
                     </div>
                     <div><a href="sub_work_details02.html"><img src="images/sub/sub_work_gallery02_1.png" alt="갤러리02"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery03_1.png" alt="갤러리03"/></a></div>
+                    <div><a href="sub_work_details03.html"><img src="images/sub/sub_work_gallery03_1.png" alt="갤러리03"/></a></div>
                     <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리04"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리05"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리06"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리07"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리08"/></a></div>
+                    <div><a href="#">
+                        <img src="images/sub/sub_work_gallery04_1.png" alt="갤러리05"/></a>
+                    </div>
+                    <div><a href="#"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리06"/></a></div>
+                    <div><a href="#"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리07"/></a></div>
+                    <div><a href="#"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리08"/></a></div>
                 </div>
                 
                 <div class="more">
