--- a/sub_work.html
+++ b/sub_work.html
@@ -118,7 +118,7 @@
                     </div>
                     <div><a href="sub_work_details02.html"><img src="images/sub/sub_work_gallery02_1.png" alt="갤러리02"/></a></div>
                     <div><a href="sub_work_details03.html"><img src="images/sub/sub_work_gallery03_1.png" alt="갤러리03"/></a></div>
-                    <div><a href="sub_work_details.html"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리04"/></a></div>
+                    <div><a href="#"><img src="images/sub/sub_work_gallery04_1.png" alt="갤러리04"/></a></div>
                     <div><a href="#">
                         <img src="images/sub/sub_work_gallery04_1.png" alt="갤러리05"/></a>
                     </div>
