--- a/images/main/sub_work_details02.html
+++ b/images/main/sub_work_details02.html
@@ -132,10 +132,10 @@
                     <!--slick-->
                     <div class="regular slider">
                         <div>
-                            <img src="images/sub/sub_work_gallery02_slide1.PNG" alt="1번사진">
+                            <img src="images/sub/sub_work_gallery02_slide1.jpg" alt="1번사진">
                         </div>
                         <div>
-                            <img src="images/sub/sub_work_gallery02_slide2.PNG" alt="2번사진">
+                            <img src="images/sub/sub_work_gallery02_slide2.jpg" alt="2번사진">
                         </div>
                     </div>
                     <!--slick-->
