--- a/images/main/index.html
+++ b/images/main/index.html
@@ -230,7 +230,7 @@
                             </div>
                             <div>
                                 <a href="sub_work_details02.html">
-                                   <img src="images/main/section2_gallery02.PNG" alt="이미지2"/>
+                                   <img src="images/main/section2_gallery02.png" alt="이미지2"/>
                                 </a>
                             </div>
                             <div>
