--- a/sub_work_details02.html
+++ b/sub_work_details02.html
@@ -143,8 +143,8 @@
                     <!--설명시작-->
                     <ul class="title">
                         <li>EF 코리아 <span>Web</span></li>
-                        <li>기업의 이념에 맞게 세련된 컬러와 심플한
-                            아이콘을 사용하여 심뢰감을 주도록 리뉴얼<br><br>
+                        <li>“교육을 통해 세상을 열다”라는 기업의 이념에 맞게 세련된 컬러와 심플한
+                            아이콘을 사용하여 심뢰감을 줄 수 있도록 리뉴얼<br><br>
                             (기존 웹사이트 바탕으로 포트폴리오용 리뉴얼)
                         </li>
                     </ul>
