--- a/sub_work_details03.html
+++ b/sub_work_details03.html
@@ -144,7 +144,7 @@
                     <ul class="title">
                         <li>VIPS <span>Web</span></li>
                         <li>
-                            기존의 무거운 색감 대신 진행중이던 이벤트 컨셉과 비슷한 컬러를 사용해
+                            기존의 사이트의 무거운 색감 대신 진행중이던 이벤트 컨셉과 비슷한 컬러를 사용해
                             기업의 이미지에 더 적합하도록 리뉴얼.
                             <br><br>
                             (기존 웹사이트 바탕으로 포트폴리오용 리뉴얼)
