--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 </div>
                             </div>
                             
-                            <span class="openbtn" style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; </span>
+                            <span class="openbtn" onclick="openNav()">&#9776; </span>
                             <!--pannel 끝-->
                             
                             </div>
