--- a/sub_work.html
+++ b/sub_work.html
@@ -81,7 +81,7 @@
                                             <div class="article-title"><a href="sub_work.html">Work</a></div>
                                             <div class="article-title"><a href="sub_unavailable.html">e-mail</a></div>
                                             <div class="article-title"><a href="https://www.instagram.com/hwis_erin/">instagram</a></div>
-                                            <div class="bottomLogo"><img src="images/common/logo_character.png" alt="로고"/></div>
+                                            <div class="bottomLogo"><img src="images/common/logo_character_without_text.png" alt="로고"/></div>
                                         <!--/#accordion-->
                                         </section>
                                         <!--아코디언 끝--> 
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                             
-                            <span class="openbtn" style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; </span>
+                            <span class="openbtn" onclick="openNav()">&#9776; </span>
                             <!--pannel 끝-->
                             
                             </div>
