--- a/sub_aboutme.html
+++ b/sub_aboutme.html
@@ -277,7 +277,7 @@
                             <div class="circle"></div>
                             <div>
                                 <p>2013.03</p>
-                                경남대학교 관광학부 입학
+                                경남대학교 입학
                             </div>
                         </div>
                     </div>
