--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <!--갤러리 시작-->
                         <div class="gallery">
                             <div>
-                                <a href="sub_work_details.html">
+                                <a href="sub_work_details01.html">
                                    <img src="images/main/section2_gallery01_cover.png" alt="이미지1"/>
                                 </a>
                             </div>
