--- a/sub_work_details03.html
+++ b/sub_work_details03.html
@@ -113,7 +113,7 @@
                     
                     <!--설명시작-->
                     <ul class="title">
-                        <li>누리숲 mobile</li>
+                        <li>VIPS web</li>
                         <li>
                             기존 사이트의 무거운 색감 대신 당시 진행중이던<br>
                             이벤트의 컨셉과 비슷한 컬러를 사용하여 기업의 이미지에<br>
